opam-version: "2.0"
maintainer: "Kai Klingenberg <k.klingenberg@gmail.com>"
authors: [ "Kai Klingenberg <k.klingenberg@gmail.com>" ]
homepage: "https://github.com/kklingenberg/echoes"
bug-reports: "https://github.com/kklingenberg/echoes/issues"
synopsis: "A message inbox with forced expiration"
depends: [
  "alcotest" {= "1.0.1"}
  "calendar" {= "2.04"}
  "dolog" {= "4.0.0"}
  "dune" {= "2.3.1"}
  "httpaf-lwt-unix" {= "0.6.5"}
  "ocaml" {>= "4.09.0" & < "4.10.0"}
  "ocamlnet" {= "4.1.7"}
  "reason" {= "3.5.2"}
  "redis-lwt" {= "0.4"}
  "yojson" {= "1.7.0"}
]
